2001-08-17  Bob Smith  <bob@thestuff.net>

         * Control.cs: Partial implementation.
