@@ -1,3 +1,7 @@
+2001-08-20  Bob Smith  <bob@thestuff.net>
+
+        * Control.cs: More implementation. Not done yet. Shutter.
+
 2001-08-17  Bob Smith  <bob@thestuff.net>
 
          * Control.cs: Partial implementation.
